# revyos-tauri-flash

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  FastBootFlash.vue  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  flash.rs  html_parser.rs  image.rs  lib.rs  main.rs  usb.rs
src/components/: ImageSelector.vue
src/components/fastboot/: FileUploader.vue  StatusDisplay.vue  StepNavigation.vue  USBDeviceList.vue
src/components/fastboot/steps/: Step1Connect.vue  Step2FlashUboot.vue  Step3Restart.vue  Step5FlashFiles.vue  Step6Complete.vue
