[package]
name = "revyos-tauri-flash"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "revyos_tauri_flash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
fastboot-protocol = { git = "https://github.com/KamijoToma/fastboot-rs", rev = "1f35b424109d40570ba30ba5976e129f09b60701"}
nusb = { git = "https://github.com/kevinmehall/nusb", rev = "a243514" }
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }

