[package]
name = "revyos-tauri-flash"
version = "0.1.0"
description = "A Desktop App to flash RevyOS Image into your board."
authors = ["KamijoToma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "revyos_tauri_flash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
fastboot-protocol = { git = "https://github.com/KamijoToma/fastboot-rs", rev = "ba7d10a717bae69a23d78908f510345ff52b4e9b"}
android-sparse-image = { git = "https://github.com/KamijoToma/fastboot-rs", rev = "ba7d10a717bae69a23d78908f510345ff52b4e9b"}
nusb = { git = "https://github.com/kevinmehall/nusb", rev = "a243514" }
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }

